--- a/package.json
+++ b/package.json
@@ -2,17 +2,51 @@
   "name": "my-new-app",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
-  },
+  "homepage": ".",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "postbuild": "cp -r ./build/* ../backend/src/main/webapp/"
+  },
+  "dependencies": {
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-scripts": "3.1.1",
+    "@types/jest": "^24.0.17",
+    "@types/node": "^12.7.2",
+    "@types/react": "^16.9.1",
+    "@types/react-dom": "^16.8.5",
+    "@types/react-router-dom": "^4.3.4",
+    "typescript": "^3.5.3",
+    "axios": "^0.19.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@types/classnames": "^2.2.7",
+    "@types/node": "^12.7.2",
+    "@types/react": "^16.7.20",
+    "@types/react-dom": "^16.0.11",
+    "@types/react-router": "^4.4.3",
+    "babel-loader": "^8.0.5",
+    "css-loader": "^2.1.0",
+    "file-loader": "^3.0.1",
+    "html-loader": "^1.0.0-alpha.0",
+    "mini-css-extract-plugin": "^0.5.0",
+    "postcss": "^7.0.13",
+    "postcss-browser-reporter": "^0.5.0",
+    "postcss-import": "^12.0.1",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.5.0",
+    "postcss-reporter": "^6.0.1",
+    "postcss-url": "^8.0.0",
+    "prettier": "^1.16.0",
+    "react-hot-loader": "^4.6.3",
+    "style-loader": "^0.23.1",
+    "ts-loader": "^5.3.3",
+    "typescript": "^3.2.4",
+    "url-loader": "^1.1.2"
   },
   "eslintConfig": {
     "extends": "react-app"
